Added team names

--- a/games/kek.html
+++ b/games/kek.html
@@ -164,6 +164,7 @@
                         <th>Дракон</th>
                         <th>5 : -3</th>
                     </tr>
+                    <tr></tr>
                 </table>
             </tr>
 
@@ -185,7 +186,7 @@
                         <th>Итого</th>
                     </tr>
                     <tr>
-                        <td><input type="text" size="40"></td>
+                        <td><input type="text" size="40" value="Команда альтруистов"></td>
                         <td>
                             <select  size="4" id="person00" onchange="compute(this)">
                                 <option selected>Выберите</option>
@@ -272,7 +273,7 @@
                     </tr>
 
                     <tr>
-                        <td><input type="text" size="40"></td>
+                        <td><input type="text" size="40" value="Команда гитаристов"></td>
                         <td>
                             <select size="4" id="person10" onchange="compute(this)">
                                 <option selected>Выберите</option>
