--- a/games/kek.html
+++ b/games/kek.html
@@ -164,7 +164,7 @@
                         <th>Дракон</th>
                         <th>5 : -3</th>
                     </tr>
-                    <tr></tr>
+                    <tr><td><br></td></tr>
                 </table>
             </tr>
 
@@ -186,7 +186,7 @@
                         <th>Итого</th>
                     </tr>
                     <tr>
-                        <td><input type="text" size="40" value="Команда альтруистов"></td>
+                        <td><input type="text" size="40" value="Команда альтруистов" align="middle"></td>
                         <td>
                             <select  size="4" id="person00" onchange="compute(this)">
                                 <option selected>Выберите</option>
@@ -268,12 +268,12 @@
                             </select>
                         </td>
                         <td>
-                            <input id="firstCount" type="number" size="3" value="0" disabled>
+                            <input id="firstCount" type="number" size="3" value="0" align="middle" disabled>
                         </td>
                     </tr>
 
                     <tr>
-                        <td><input type="text" size="40" value="Команда гитаристов"></td>
+                        <td><input type="text" size="40" value="Команда гитаристов" align="middle"></td>
                         <td>
                             <select size="4" id="person10" onchange="compute(this)">
                                 <option selected>Выберите</option>
@@ -355,7 +355,7 @@
                             </select>
                         </td>
                         <td>
-                            <input id="secondCount" type="number" size="3" value="0" disabled>
+                            <input id="secondCount" type="number" size="3" value="0" align="middle" disabled>
                         </td>
                     </tr>
 
